Added multi inputs file upload

--- a/MVCFileUpload/MVCFileUpload/Views/Shared/_Layout.cshtml
+++ b/MVCFileUpload/MVCFileUpload/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Simple Upload", "Index", "Home")</li>
                     <li>@Html.ActionLink("Complex Upload", "Complex", "Home")</li>
+                    <li>@Html.ActionLink("Multi Inputs", "MultiInputs", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
